--- a/static/styles.css
+++ b/static/styles.css
@@ -13,7 +13,6 @@ body{
 
 .box {
   width: 70%;
-  height: 100px;
   background-color: white;
   border: thin solid #b3b3b3;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -22,9 +21,17 @@ body{
   margin: 0 15% 0 15%;
 }
 
-h2{
+h2 {
   color: #003366;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin: 20px 10px 10px 10px;
+}
+
+h3 {
+  color: #ed6500;
   font-family: 'Alegreya Sans', sans-serif;
+  margin: 0 10px 5px 10px;
 }
 
 .top{
@@ -34,7 +41,7 @@ h2{
 }
 
 .login {
-  background-color: #ed6500; /* Green */
+  background-color: #ed6500;
   border: none;
   color: white;
   padding: 12px 20px;
