--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,8 +4,13 @@
 	<h2>Categories</h2>
 
 	{% for catalog in catalog %}
-		<h3>{{catalog.name}}</h3>
+		<a href="{{url_for('showItems', cat_name = catalog.name)}}"><h3>{{catalog.name}}</h3></a>
 	{% endfor %}
+
+	<div class="vl"></div>
+
+	{% block menu %}
+	{% endblock %}
 </div>
 
 
