--- a/static/styles.css
+++ b/static/styles.css
@@ -24,6 +24,16 @@ h3 {
   margin: 0 10px 5px 10px;
 }
 
+p {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 10px 15px 10px;
+}
+
+a:link {
+  text-decoration: none;
+}
+
 .box {
   width: 70%;
   background-color: white;
