--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,9 +1,9 @@
 {% extends "catalog.html" %}
 {% block menu %}
 <div class="items">
-	<h2>{{cat.name}} Items</h2>
+	<h2>{{cat.name}} Items ()</h2>
 	{% for i in items %}
-	<a href="#"><h3>{{i.name}}</h3></a>
+	<a href="{{url_for('showOneItem', cat_name = cat.name, item_name = i.name)}}"><h3>{{i.name}}</h3></a>
 	{% endfor %}
 </div>
 {% endblock %}
