--- a/templates/item.html
+++ b/templates/item.html
@@ -4,9 +4,9 @@
   <h2>{{item.name}}</h2>
   <p>{{item.description}}</p>
   <div class="editdeletebox">
-    <a href="{{url_for('editItem', item_name = item.name)}}" class="editdeletelink">Edit</a>
+    <a href="{{url_for('editItem', item_name = item.name, category_id = category_id)}}" class="editdeletelink">Edit</a>
     <div class="vl-description"></div>
-    <a href="#" class="editdeletelink">Delete</a>
+    <a href="{{url_for('deleteItem', item_name = item.name, category_id = category_id)}}" class="editdeletelink">Delete</a>
   </div>
 </div>
 {% endblock %}
