--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,13 @@
 		<header>
 			<div class="top">
 				<h1 class="name"> Catalog App </h1>
-				<button class="login"> <a hreh="{{url_for('showLogin')}}"><b>Login</b><a> </button>
+				<button class="login">
+					{% if 'username' not in session %}
+					<a href="{{url_for('showLogin')}}"><b>Login</b><a>
+					{% else %}
+					<a href="{{url_for('disconnect')}}"><b>Logout</b><a>
+					{% endif %}
+				</button>
 			</div>
 		</header>
 			{% block content %}
