--- a/templates/main.html
+++ b/templates/main.html
@@ -13,13 +13,16 @@
 		<header>
 			<div class="top">
 				<h1 class="name"> Catalog App </h1>
-				<button class="login">
-					{% if 'username' not in session %}
-					<a href="{{url_for('showLogin')}}"><b>Login</b><a>
-					{% else %}
-					<a href="{{url_for('disconnect')}}"><b>Logout</b><a>
-					{% endif %}
-				</button>
+				{% if 'username' not in session %}
+				<a href="{{url_for('showLogin')}}">
+					<button class="login"><b>Login</b></button>
+				</a>
+				{% else %}
+				<a href="{{url_for('disconnect')}}">
+					<button class="login"><b>Logout</b></button>
+				</a>
+				{% endif %}
+
 			</div>
 		</header>
 			{% block content %}
